--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.9",
     "next": "15.4.2",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
